# flight-controller

./: README.md
firmware/: .gitignore  Cargo.toml  README.md  memory.x  openocd.gdb
firmware/.cargo/: config.toml
firmware/src/: gnss.rs  hal.rs  imu.rs  main.rs  motors.rs  pins.rs  radio.rs  radio_hal.rs  spi.rs
pcb-for-nano-s2/: .gitignore  flight-controller.kicad_pcb  flight-controller.kicad_pro  flight-controller.kicad_sch
