[package]
authors = ["Friedrich Schöller <code@schoeller.se>"]
edition = "2018"
readme = "README.md"
name = "firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-itm = "0.4.2"
stm32g4 = { version = "0.15.1", features = ["stm32g4a1"] }
paste = "1.0.11"
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
